==> ccrawford/PFD_FSDIY_RSG/src/Button.cpp <==
/*
	Button - a small library for Arduino to handle button debouncing
	
	MIT licensed.
*/

#include "Button.h"
#include <Arduino.h>

#define REPEAT_DELAY_MS 500   // Feel free to change these values to suit preferences. This is the delay before repeat starts
#define REPEAT_INTERVAL_MS 100  // and this is the delay between repeats. 

Button::Button(const String btn_name, uint8_t pin, uint16_t debounce_ms, bool repeat)
:  _name(btn_name)  
,  _pin(pin)
,  _delay(debounce_ms)
,  _state(HIGH)
,  _ignore_until(0)
,  _has_changed(false)
,  _repeat(repeat)
{
}

void Button::initialize(const String btn_name, uint8_t pin, uint16_t debounce_ms, bool repeat)
{
	// Initialize class
	this->_name = btn_name; 
	this->_pin = pin;
	this->_delay = debounce_ms;
	this->_state = HIGH;
	this->_ignore_until = 0;
	this->_has_changed = false;
	this->_repeat = repeat;

	// Call begin
	this->begin();
}

void Button::begin()
{
	pinMode(_pin, INPUT_PULLUP);
}

// 
// public methods
// 

char Button::read()
{
	// ignore pin changes until after this delay time
	if (_ignore_until > millis())
	{
		// debouncing
		return -1;
	}
	
	// pin has changed 
	else if (digitalRead(_pin) != _state)
	{
		_ignore_until = millis() + _delay;
		_state = !_state;
		_has_changed = true;
	}
	
	return _state;
}

// has the button been toggled from on -> off, or vice versa
bool Button::toggled()
{
	read();
	return has_changed();
}

// mostly internal, tells you if a button has changed after calling the read() function
bool Button::has_changed()
{
	if (_has_changed == true)
	{
		_has_changed = false;
		return true;
	}
	return false;
}

// has the button gone from off -> on
bool Button::pressed()
{
	if (read() == PRESSED && has_changed() == true) {
		_pressedMs = millis();
		return true;
	} else return false;
}

bool Button::held()
{
	return (read() == PRESSED && ((_pressedMs + REPEAT_DELAY_MS) < millis()));
}

// has the button gone from on -> off
bool Button::released()
{
	if (read() == RELEASED && has_changed() == true)
		return true;
	else
		return false;
}

// Return the name of the button
String Button::get_name()
{
	return this->_name;
}

void Button::update()
{
	if(released()) {
		Serial.write(String(get_name() + "=0\n").c_str());  
	} else if(pressed()) {
		Serial.write(String(get_name() + "=1\n").c_str());
		delay(50); //delay to avoid double click inputs
	} else if(_repeat && held()) {
		delay(REPEAT_INTERVAL_MS);
		Serial.write(String(get_name() + "=1\n").c_str());
	}
}
